# sigrok-dev

./: .gitignore  .gitmodules  README.md  dev.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/sigrok_dev/: sigrok_cli.py
tests/: conftest.py  run_basic_tests.py  test_sigrok_cli.py
