[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sigrok-dev"
version = "0.1.0"
description = "Development tools for sigrok signal analysis software"
license = "GPL-2.0-or-later"
readme = "README.md"
authors = [{name = "Oleksandr Kolodkin", email = "oleksandr.kolodkin@ukr.net"}]
maintainers = [{name = "Oleksandr Kolodkin", email = "oleksandr.kolodkin@ukr.net"}]
keywords = ["sigrok", "tool"]
packages = [{include = "sigrok_dev", from = "src"}]

[project.urls]
homepage = "https://github.com/kolod/sigrok-dev"
repository = "https://github.com/kolod/sigrok-dev"

[tool.poetry.dependencies]
python = "^3.13"
rich = "^14.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.0.0"
black = "^24.0.0"
isort = "^5.0.0"
flake8 = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/sigrok_dev --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".tox"
]
